<resources>
    <string name="app_name">ExpenseAppllication</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="expense_name">Name</string>
    <string name="expense_cost">Cost</string>
    <string name="expense_category">Category</string>
    <string name="title">Week</string>
    <string name="add_expense">Add</string>

    <string name="dialog_add_item_title">Add new expense</string>
    <string name="dialog_edit_item_name">Name</string>
    <string name="dialog_edit_item_cost">Cost</string>
    <string name="dialog_edit_item_category">Category</string>
</resources>
