<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:orientation="vertical"
                style="@style/AppTheme">

    <TextView
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"/>

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/title">
        <TableRow>
            <TextView
                android:id="@+id/name"
                android:text="@string/expense_name"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/cost"
                android:text="@string/expense_cost"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/category"
                android:text="@string/expense_category"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textStyle="bold"
                />
        </TableRow>


        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

    </TableLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
